added name and info

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Anna Woodlief</h1>
     <p> This is a simple HTML file for the merge conflict assignment.</p>
+    <h1>Nick Noble</h1>
+    <p1>I am a 21 year old software dev student</p1>
 </body>
 </html>
