Adding lines to create conflict

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Anna Woodlief</h1>
     <p> This is a simple HTML file for the merge conflict assignment.</p>
+    <h2>
+        hiii this is my attempt to add lines to create a conflict 
+    </h2>
 </body>
 </html>
